--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/style1.css">
-    <link rel="stylesheet" href="../styles/mainstyle.css">
-    <script src="../scripts/script1.js" defer> </script>
-    <script src="../scripts/hamburghermenu.js" defer></script>
+    <link rel="stylesheet" href="./styles/style1.css">
+    <link rel="stylesheet" href="./styles/mainstyle.css">
+    <script src="./scripts/script1.js" defer> </script>
+    <script src="./scripts/hamburghermenu.js" defer></script>
     
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
-    <link rel="manifest" href="../favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+    <link rel="manifest" href="./favicons/site.webmanifest">
 
-    <link rel="manifest" href="../JSON/manifest.json">
+    <link rel="manifest" href="./JSON/manifest.json">
     <meta name="theme-color" content="#E6FFE6">
 
 </head>
@@ -40,11 +40,11 @@
 
     <section class="hero">    
         <div class="hero-content">
-            <img src="../Images/homePageImages/auto-image-1.jpg" alt="img1" class="slide active">
-            <img src="../Images/homePageImages/auto-image-2.avif" alt="img2" class="slide">
-            <img src="../Images/homePageImages/auto-image-3.jpg" alt="img3" class="slide">
-            <img src="../Images/homePageImages/auto-image-4.jpg" alt="img4" class="slide">
-            <img src="../Images/homePageImages/auto-image-5.jpg"  alt="img5" class="slide">
+            <img src="./Images/homePageImages/auto-image-1.jpg" alt="img1" class="slide active">
+            <img src="./Images/homePageImages/auto-image-2.avif" alt="img2" class="slide">
+            <img src="./Images/homePageImages/auto-image-3.jpg" alt="img3" class="slide">
+            <img src="./Images/homePageImages/auto-image-4.jpg" alt="img4" class="slide">
+            <img src="./Images/homePageImages/auto-image-5.jpg"  alt="img5" class="slide">
         </div>
     </section>
 
@@ -56,7 +56,7 @@
              <h3 class="h3"> Daily Health Tip </h3>
         </div>
         <div class="grid-box" id="wellbeing-image">
-            <img src="../Images/homePageImages/grid-image.jpg" alt="health">
+            <img src="./Images/homePageImages/grid-image.jpg" alt="health">
         </div>
     </div>
 
@@ -91,15 +91,15 @@
 
     <div class="about-imagegrid">
         <div class="about-image">
-            <img src="../Images/homePageImages/about1.jpg" alt="professional">
+            <img src="./Images/homePageImages/about1.jpg" alt="professional">
             <p><b> GreenBite employs highly experienced and certified wellness coaches from across the country to give our customers the best advice </b></p> 
         </div>
         <div class="about-image">
-            <img src="../Images/homePageImages/about2.jpg" alt="gym">
+            <img src="./Images/homePageImages/about2.jpg" alt="gym">
             <p><b> We offer a well equipped gymnasium to assist with the daily exercises of our customers </b></p>
         </div>
         <div class="about-image">
-            <img src="../Images/homePageImages/about3.jpg" alt="restaurant">
+            <img src="./Images/homePageImages/about3.jpg" alt="restaurant">
             <p><b> We also offer a range of healthy cuisines from around the world in our very own restaurant at convinient prices exclusively for our customers </b></p>
         </div>
     </div>
@@ -123,7 +123,7 @@
                     <li><a href="#About"> About Us </a>.</li>
                     <li> Privacy Policy </li>
                     <li> Terms of Service </li>
-                    <li><a href="Page6.html"> Contact </li>
+                    <li><a href="./pages/Page6.html"> Contact </li>
                 </ul>
             </div>
         </div>
