--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
 
         <ul class="nav-list">
-            <li><a href="index.html"> Home </a></li>
+            <li><a href="./index.html"> Home </a></li>
             <li><a href="#About"> About </a></li>
-            <li><a href="Page2.html"> Healthy Recipies </a></li>
-            <li><a href="Page3.html"> Nutrition Calculator </a></li>
-            <li><a href="Page4.html"> Workout Generator </a></li>
-            <li><a href="page5.html"> Mindfulness </a></li>
-            <li><a href="Page6.html"> Contact & feedback </a></li>
+            <li><a href="./pages/Page2.html"> Healthy Recipies </a></li>
+            <li><a href="./pages/Page3.html"> Nutrition Calculator </a></li>
+            <li><a href="./pages/Page4.html"> Workout Generator </a></li>
+            <li><a href="./pages/page5.html"> Mindfulness </a></li>
+            <li><a href="./pages/Page6.html"> Contact & feedback </a></li>
         </ul>
     </div>
 
