--- a/pages/Page2.html
+++ b/pages/Page2.html
@@ -22,8 +22,8 @@
      <div class="div1" id="header"> 
         <div class="logo"> GreenBite </div>
         <ul class="nav-list">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="index.html#About"> About </a></li>
+            <li><a href="/index.html"> Home </a></li>
+            <li><a href="/index.html#About"> About </a></li>
             <li><a href="Page2.html"> Healthy Recipies </a></li>
             <li><a href="Page3.html"> Nutrition Calculator </a></li>
             <li><a href="Page4.html"> Workout Generator </a></li>
